[package]
name = "cheat-engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.60", features = ["derive"] }
hex = "0.4.3"
memchr = "2.7.6"
process-memory = "0.5.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rayon = "1.11.0"
sysinfo = "0.37.2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory"] }
[target.'cfg(target_vendor="apple")'.dependencies]
mach-sys = "0.5"
